--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://52.66.5.76:9000/</sonar.host.url>
+		<sonar.host.url>http://52.66.5.76:9000//</sonar.host.url>
                <!-- <sonar.login>875fcbbaa1557683f2c8fe215558b28bd00e7e13</sonar.login> -->
 		 
                 <sonar.login>admin</sonar.login>
